# foosball

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SETUP.md  backup.sh  datasample.json  deploy.sh  docker-compose.yml  foosball.db  index.html  useful.md  web-config.toml
data/: foosball.db
foos/: Cargo.toml
foos/migrations/2019-07-02-190017_initial/: down.sql  up.sql
foos/migrations/2019-07-05-190802_ranking-history/: down.sql  up.sql
foos/src/: database.rs  game.rs  lib.rs  player.rs  ranking.rs  schema.rs  series.rs  team.rs  user.rs
foos/src/history/: mod.rs  player_ranking.rs  team_ranking.rs
foos/src/reports/: leader_board.rs  mod.rs  player_stats.rs  team_stats.rs
foosClient/: .prettierrc  README.md  angular.json  karma.conf.js  package-lock.json  package.json
foosClient/src/: index.html  styles.scss
foos_cli/: Cargo.toml
foos_cli/src/: input.rs  main.rs  player.rs  record.rs  replay.rs  series.rs  user.rs
foos_cli/src/config/: foos_cli_config.rs  mod.rs
foos_web/: Cargo.toml
foos_web/src/: game.rs  main.rs  player.rs  series.rs  user.rs
foos_web/src/config/: foos_web_config.rs  mod.rs
foos_web/src/reports/: mod.rs
migrations/2018-07-18-221540_games/: up.sql
migrations/2019-06-10-225830_create_players/: down.sql  up.sql
migrations/2019-06-11-215355_create_match_game_result_team/: down.sql  (+1 more)
scripts/: 20190912-foosball.backup  player_streaks.sql
src/: create_match.rs  game_results.rs  index.rs  leaderboard.rs  lib.rs  main.rs  models.rs  play.rs  playerstats.rs  rank.rs  schema.rs  shared_queries.rs  teamstats.rs
static_files/: styles.css
templates/: index.html  index_old.html  leaders.html  new_match.html  play.html  player_stats.html  team_stats.html
(+102 files in other folders)
