[package]
name = "foos"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]

[dependencies]
rouille = "2.1"
diesel = { version = "1.4", features = ["sqlite"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
Inflector = "0.11"
tera = "0.11"
chrono = "0.4"
libsqlite3-sys = { version = "*", features = ["bundled"] }