[package]
name = "foos"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8"
r2d2-diesel = "1.0"
serde = "1.0"
serde_derive = "1.0"
bcrypt = "0.4"
diesel_migrations = "1.4.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4"
features = ["postgres", "chrono"]

[target.x86_64-unknown-linux-musl.dependencies]
openssl = "0.10"