[package]
name = "foos_cli"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foos = { path = "../foos" }
clap = "2.33"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
dirs = "2.0"